--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "classnames": "^2.3.1",
     "node-sass": "^5.0.0",
     "random-words": "^1.1.1",
     "react": "^17.0.2",
