--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "classnames": "^2.3.1",
     "node-sass": "^5.0.0",
+    "random-word-slugs": "^0.1.6",
     "random-words": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
