--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "classnames": "^2.3.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "^7.0.0",
     "random-word-slugs": "^0.1.6",
     "random-words": "^1.1.1",
     "react": "^17.0.2",
@@ -22,7 +22,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
