--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
     ]
   },
   "devDependencies": {
-    "@types/random-words": "^1.1.2"
+    "@types/random-words": "^1.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.28.0"
   }
 }
