--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "react-scripts": "4.0.3",
     "tilfeldigeord": "^1.0.5",
     "typescript": "^4.5.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "@types/random-words": "^1.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.28.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,12 +49,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/random-words": "^1.1.2",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.28.0"
   }
 }
